// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports yes/no contest allows voting for both yes and no 1`] = `
.c7 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #FFFFFF;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c7::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: rgb(211,211,211);
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '';
}

.c0 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem 0.5rem;
}

.c5 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem;
}

.c1 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c2::before,
.c2::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c2::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c2::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  margin: 0 auto;
  width: 100%;
  padding: 0.5rem 2rem 2rem;
}

.c6 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 1rem;
}

@media (min-width:480px) {
  .c7 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

<div>
  <main
    class="sc-iJKOzS ipNbwh"
  >
    <div
      class="c0"
      id="contest-header"
    >
      <div
        class="sc-jRQAMF boeJiV"
        id="audiofocus"
      >
        <h1
          aria-label="County Prop 1: Garbage Collection Program."
        >
          <div
            class="c1"
          >
            County
          </div>
          Prop 1: Garbage Collection Program
        </h1>
        <p>
          <strong>
            Vote Yes or No.
          </strong>
          <span
            class="screen-reader-only"
          >
            Institute a garbage collection program that collects garbage on weekdays across the county.
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              class="sc-dkPtyc dknpMx"
            >
              <span>
                Institute a garbage collection program that collects garbage on weekdays across the county.
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        data-testid="contest-choices"
      >
        <button
          class="c7"
          data-choice="yes"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              aria-label=" Yes on Prop 1"
              class="sc-dkPtyc iuZdud"
            >
              Yes
            </p>
          </div>
        </button>
        <button
          class="c7"
          data-choice="no"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              aria-label=" No on Prop 1"
              class="sc-dkPtyc iuZdud"
            >
              No
            </p>
          </div>
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports yes/no contest displays warning when attempting to change vote 1`] = `
.c8 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #FFFFFF;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c8::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: rgb(211,211,211);
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '';
}

.c7 {
  position: relative;
  border-radius: 0.125rem;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  background: #028099;
  cursor: pointer;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
  text-align: left;
  color: #FFFFFF;
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c7::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  border-right: 1px solid;
  border-color: #028099;
  border-radius: 0.125rem 0 0 0.125rem;
  background: #ffffff;
  width: 3rem;
  text-align: center;
  color: #028099;
  font-size: 2rem;
  font-weight: 700;
  content: '✓';
}

.c0 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem 0.5rem;
}

.c5 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 2rem;
}

.c1 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  overflow: auto;
}

.c2::before,
.c2::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c2::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c2::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  margin: 0 auto;
  width: 100%;
  padding: 0.5rem 2rem 2rem;
}

.c6 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 1rem;
}

@media (min-width:480px) {
  .c8 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

@media (min-width:480px) {
  .c7 {
    padding: 1rem 1rem 1rem 4rem;
  }
}

<div>
  <main
    class="sc-iJKOzS ipNbwh"
  >
    <div
      class="c0"
      id="contest-header"
    >
      <div
        class="sc-jRQAMF boeJiV"
        id="audiofocus"
      >
        <h1
          aria-label="County Prop 1: Garbage Collection Program."
        >
          <div
            class="c1"
          >
            County
          </div>
          Prop 1: Garbage Collection Program
        </h1>
        <p>
          <strong>
            Vote Yes or No.
          </strong>
          <span
            class="screen-reader-only"
          >
            Institute a garbage collection program that collects garbage on weekdays across the county.
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              class="sc-dkPtyc dknpMx"
            >
              <span>
                Institute a garbage collection program that collects garbage on weekdays across the county.
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        data-testid="contest-choices"
      >
        <button
          class="c7"
          data-choice="yes"
          data-selected="true"
          role="option"
          type="button"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              aria-label="Selected, Yes on Prop 1"
              class="sc-dkPtyc iuZdud"
            >
              Yes
            </p>
          </div>
        </button>
        <button
          class="c8"
          data-choice="no"
          data-selected="false"
          role="option"
          type="button"
        >
          <div
            class="sc-jRQAMF boeJiV"
          >
            <p
              aria-label=" No on Prop 1"
              class="sc-dkPtyc iuZdud"
            >
              No
            </p>
          </div>
        </button>
      </div>
    </div>
  </main>
</div>
`;
